# firmware

./: Cargo.toml
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs
bootloader/src/: images.rs  main.rs
firmware/: Cargo.toml  build.rs  psram.x
firmware/src/: main.rs
legacy/: mpr121_api.rs
presentation_test/: Cargo.toml  build.rs  memory.x
presentation_test/src/: log_setup.rs  main.rs  mpr121.rs  oled.rs  serial.rs
