[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: these guys need features
sifli-hal = { workspace = true }
sifli-radio = { workspace = true }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["set-sp", "set-vtor"] }
cortex-m-semihosting = { version = "0.5" }
panic-probe = { version = "1", features = ["print-defmt"] }
# panic-halt = "*"

embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-futures = "0.1.2"

embedded-io = { version = "0.7" }
embedded-io-async = { version = "0.7" }
embedded-hal-async = { version = "1.0" }

defmt = "1"
defmt-rtt = "1"
heapless = "0.9"
static_cell = "2.1.1"
portable-atomic = "1.11.1"
bt-hci = { version = "0.8", features = ["defmt"] }
trouble-host = { version = "0.6.0", features = [
  "defmt",
  "peripheral",
  "gatt",
  "derive",
  "security",
] }

# USB dependencies
embassy-usb = { version = "0.5", features = ["defmt"] }
usbd-hid = { version = "0.8", features = ["defmt"] }
